Fixed loader alignment

--- a/client/src/pages/Discover.css
+++ b/client/src/pages/Discover.css
@@ -65,5 +65,5 @@
 }
 
 .loader {
-  margin: 15em 30em !important;
+  margin: 15em auto !important;
 }
